# learn-rust

./: .env  .gitignore  Cargo.toml
session1/authentication/: Cargo.toml
session1/authentication/src/: lib.rs
session1/login/: Cargo.toml
session1/login/src/: main.rs
session1/login_manager/: Cargo.toml
session1/login_manager/src/: main.rs
session1/variables/src/: main.rs
session2/atomic/src/: main.rs
session2/channels/src/: main.rs
session2/divide_work/src/: main.rs
session2/hello_thread/src/: main.rs
session2/lock_free/: Cargo.toml
session2/lock_free/src/: main.rs
session2/multithreading_issues/: Cargo.toml
session2/multithreading_issues/src/: main.rs
session2/mutex/src/: main.rs
session2/rayon_iter/: Cargo.toml
session2/rayon_iter/src/: main.rs
session2/rayon_scope/: Cargo.toml
session2/rayon_scope/src/: main.rs
session2/rwlock/: Cargo.toml
session2/rwlock/src/: main.rs
session2/scoped_thread/src/: main.rs
session2/thread_affinity/src/: main.rs
session2/thread_builder/src/: main.rs
session2/thread_parking/: Cargo.toml
session2/thread_parking/src/: main.rs
session2/thread_priority/: Cargo.toml
session2/thread_priority/src/: main.rs
session2/worker/src/: main.rs
session2/worker_queue/: Cargo.toml
session2/worker_queue/src/: main.rs
session3/async_blocking/: Cargo.toml
session3/async_blocking/src/: main.rs
session3/async_hello/: Cargo.toml
session3/async_hello/src/: main.rs
session3/errors/: Cargo.toml
session3/errors/src/: main.rs
session3/restclient/: Cargo.toml
session3/restclient/src/: main.rs
session3/tokio_hello/: Cargo.toml
session3/tokio_hello/src/: main.rs
session3/tokio_io/: Cargo.toml
session3/tokio_io/src/: main.rs
session3/tokio_pinning/: Cargo.toml
session3/tokio_pinning/src/: main.rs
session3/tokio_select/: Cargo.toml
session3/tokio_select/src/: main.rs
session3/tokio_sync/: Cargo.toml
session3/tokio_sync/src/: main.rs
session3/tokio_test/: Cargo.toml
session3/tokio_test/src/: main.rs
session4/bin_protocol/: Cargo.toml
session4/bin_protocol/src/: main.rs
session4/db/: .env  Cargo.toml
session4/db/migrations/: 20240628094721_initial.sql  20240628134104_additiona_record.sql
session4/db/src/: main.rs
session4/drop/src/: main.rs
session4/generics/src/: main.rs
session4/lifetimes/src/: main.rs
session4/logspan/: Cargo.toml
session4/logspan/src/: main.rs
session4/memory/src/: main.rs
session4/package/src/: main.rs
session4/rc_arc/: Cargo.toml
session4/thumbnail/: Cargo.toml
session4/thumbnail/migrations/: 20240629122312_init_schema.sql
session4/thumbnail/src/: main.rs
session4/thumbnail/src/errors/: app_error.rs
session4/thumbnail/src/resources/: index.html  redirect.html  search_result.html
session4/trait_example/src/: main.rs
session4/web_server/: Cargo.toml  hello.html
session4/web_server/src/: main.rs
session5/protocol/: Cargo.toml
session5/protocol/src/: lib.rs  main.rs
session5/sys_app/: README.md  pubspec.yaml
session5/sys_app/android/app/: build.gradle
session5/sys_app/ios/Runner/: Info.plist
session5/sys_app/ios/Runner.xcodeproj/: project.pbxproj
session5/sys_app/lib/: main.dart
session5/sys_app/linux/: CMakeLists.txt  my_application.cc
session5/sys_app/test/: widget_test.dart
session5/sys_app/web/: index.html  manifest.json
session5/sys_app/windows/: CMakeLists.txt
session5/sys_daemon/: Cargo.toml  uuid
session5/sys_daemon/src/: main.rs
session5/sys_server/: Cargo.toml
session5/sys_server/migrations/: 20240711180957_init.sql  20240713092722_add_timestamp.sql
session5/sys_server/src/: handler.rs  main.rs
session5/sys_server/src/repository/: data_point_repository.rs  mod.rs
session5/sys_server/src/service/: data_point_service.rs  mod.rs
session5/sys_server/src/static/: collector.jinja  index.jinja
(+7 files in other folders)
