[package]
name = "learn-rust"
version = "0.1.0"
edition = "2021"

[dependencies]

[workspace]
 members = [
    "session1/hello_world",
    "session1/variables",
    "session1/authentication",
    "session1/login", 
    "session1/login_manager",
    "session2/hello_thread",
    "session2/divide_work",
    "session2/thread_builder",
    "session2/scoped_thread",
    "session2/atomic",
    "session2/mutex",
    "session2/rwlock",
    "session2/multithreading_issues",
    "session2/lock_free",
    "session2/thread_parking",
    "session2/channels",
]
