[package]
name = "learn-rust"
version = "0.1.0"
edition = "2021"

[dependencies]
lifetime = "0.1.0"
once_cell = "1.19.0"

[workspace]
 members = [
    "session1/hello_world",
    "session1/variables",
    "session1/authentication",
    "session1/login", 
    "session1/login_manager",
    "session2/hello_thread",
    "session2/divide_work",
    "session2/thread_builder",
    "session2/scoped_thread",
    "session2/atomic",
    "session2/mutex",
    "session2/rwlock",
    "session2/multithreading_issues",
    "session2/lock_free",
    "session2/thread_parking",
    "session2/channels",
    "session2/worker",
    "session2/worker_queue",
    "session2/thread_affinity",
    "session2/thread_priority",
    "session2/rayon_iter",
    "session2/rayon_scope",
    "session3/async_hello",
    "session3/tokio_hello",
    "session3/async_blocking",
    "session3/tokio_test",
    "session3/errors",
    "session3/tokio_io",
    "session3/restclient",
    "session3/tokio_sync",
    "session3/tokio_select",
    "session3/tokio_pinning",
    "session4/logspan",
    "session4/db",
    "session4/web_server",
    "session4/thumbnail",
    "session4/memory",
    "session4/drop",
    "session4/rc_arc",
    "session4/lifetimes",
    "session4/trait_example",
    "session4/generics",
    "session4/package",
    "session4/bin_protocol",
]
