[package]
name = "thumbnail"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.86"
axum = { version = "0.7.5", features = ["multipart"] }
dotenv = "0.15.0"
futures = "0.3.30"
image = "0.25.1"
serde = { version = "1.0.203", features = ["derive"] }
sqlx = { version = "0.7.4", features = ["runtime-tokio-native-tls", "postgres"] }
tokio = { version = "1.38.0", features = ["full"] }
tokio-util = { version = "0.7.11", features = ["io"] }
