[package]
name = "sys_server"
version = "0.1.0"
edition = "2021"

[dependencies]
protocol = {path = "../protocol"}
anyhow = "1.0.86"
tokio = { version = "1.38.0", features = ["full"] }
chrono = "0.4.38"
tracing-subscriber = "0.3.18"
tracing = "0.1.40"
color-eyre = "0.6.3"
futures = "0.3.30"
dotenv = "0.15.0"
sqlx = { version = "0.7.4", features = ["postgres", "runtime-tokio-native-tls"] }
axum = "0.7.5"
serde = { version = "1.0.204", features = ["derive"] }
serde_json = "1.0.120"
axum-template = { version = "2.3.0", features = ["minijinja"] }
minijinja = { version = "2.0.3", features = ["loader"] }
